// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VExpansionPanel should hide actions and match snapshot 1`] = `
<div class="v-expansion-panel"
     aria-expanded="false"
>
  <button class="v-expansion-panel-header"
          type="button"
          aria-expanded="false"
          props="[object Object]"
  >
    <div class="v-expansion-panel-header__icon">
      <i aria-hidden="true"
         class="v-icon notranslate mdi mdi-chevron-down theme--light"
      >
      </i>
    </div>
  </button>
</div>
`;

exports[`VExpansionPanel should hide actions and match snapshot 2`] = `
<div class="v-expansion-panel"
     aria-expanded="false"
>
  <button class="v-expansion-panel-header"
          type="button"
          aria-expanded="false"
  >
    <div class="v-expansion-panel-header__icon">
      <i aria-hidden="true"
         class="v-icon notranslate mdi mdi-chevron-down theme--light"
      >
      </i>
    </div>
  </button>
</div>
`;
